--- a/srcBeren/Makefile_cpu
+++ b/srcBeren/Makefile_cpu
@@ -1,5 +1,6 @@
 CXX = mpicxx
 source_dirs := . srcFields srcParticles srcDiagnostics
+EIGEN_INCLUDE_PATH=-isystem ../../../../eigen/
 
 search_wildcards       := $(addsuffix /*.cpp,$(source_dirs)) 
 override compile_flags += -Wall -pipe -std=c++11 -cxx=g++ -O3 
@@ -10,7 +11,7 @@ Beren3D: $(notdir $(patsubst %.cpp,%.o,$(wildcard $(search_wildcards))))
 VPATH := $(source_dirs)
      
 %.o: %.cpp
-	$(CXX) -c -MD $(compile_flags) $(addprefix -I,$(source_dirs))  $^
+	$(CXX) -c -MD $(compile_flags) $(EIGEN_INCLUDE_PATH) $(addprefix -I,$(source_dirs))  $^
 
 clean:
 	rm -f Beren3D *.o *.d
